--- a/Labs/Lab0/lab0_template.qmd
+++ b/Labs/Lab0/lab0_template.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Lab 0: Getting Started with dplyr"
 subtitle: "Your First Data Analysis"
-author: "Your Name Here"
+author: "Shaurya Chauhan"
 date: today
 format: 
   html:
@@ -46,7 +46,7 @@ Explore the structure of your data and answer these questions:
 
 ```{r explore-structure}
 # Use glimpse() to see the data structure
-
+glimpse(car_data)
 
 # Check the column names
 
@@ -61,10 +61,10 @@ head(car_data)
 - Are there any column names that might cause problems? Why?
 
 **Your answers:**
-- Rows: [YOUR ANSWER]
-- Columns: [YOUR ANSWER]  
-- Variable types: [YOUR ANSWER]
-- Problematic names: [YOUR ANSWER]
+- Rows: 50,000
+- Columns: 7 
+- Variable types: dbl and chr
+- Problematic names: Engine size, Fuel type and Year of manufacture for they all have spaces
 
 ## 1.2 Tibble vs Data Frame
 
@@ -81,7 +81,7 @@ car_df
 
 **Question:** What differences do you notice in how they print?
 
-**Your answer:** [YOUR ANSWER]
+**Your answer:** Tibble is showing 10 at a time, in this same space. Regular dataframe has all the 50k rows and 7 columns displayed in a separate tab.
 
 # Exercise 2: Basic Column Operations
 
@@ -91,12 +91,18 @@ Practice selecting different combinations of columns:
 
 ```{r column-selection}
 # Select just Model and Mileage columns
+colnames(car_data)
 
+car_data %>% 
+  select(Model, Mileage)
 
 # Select Manufacturer, Price, and Fuel type
-
+car_data %>% 
+  select(Manufacturer, Price, 'Fuel type')
 
 # Challenge: Select all columns EXCEPT Engine Size
+car_data %>% 
+  select(-'Engine size')
 
 ```
 
@@ -106,7 +112,8 @@ Let's fix a problematic column name:
 
 ```{r rename-columns}
 # Rename 'Year of manufacture' to year
-
+car_data <- car_data %>% 
+  rename(year = `Year of manufacture`)
 
 # Check that it worked
 names(car_data)
@@ -114,7 +121,7 @@ names(car_data)
 
 **Question:** Why did we need backticks around `Year of manufacture` but not around `year`?
 
-**Your answer:** [YOUR ANSWER]
+**Your answer:** Because it had spaces in it that would cause an issue if we did not specify it as character type data using backticks. 'year' doesnt have that issue
 
 # Exercise 3: Creating New Columns
 
@@ -122,10 +129,12 @@ names(car_data)
 
 ```{r calculate-age}
 # Create an 'age' column (2025 minus year of manufacture)
-
+car_data <- car_data %>% 
+  mutate(age = 2025 - year)
 
 # Create a mileage_per_year column  
-
+car_data <- car_data %>% 
+  mutate(mileage_per_year = Mileage / age)
 
 # Look at your new columns
 #select(car_data, Model, year, age, Mileage, mileage_per_year)
@@ -135,9 +144,19 @@ names(car_data)
 
 ```{r categorize-cars}
 # Create a price_category column where if price is < 15000, its is coded as budget, between 15000 and 30000 is midrange and greater than 30000 is mid-range (use case_when)
-
+car_data <- car_data %>% 
+  mutate(
+    price_category = case_when(
+      Price < 15000 ~ "budget",
+      Price >= 15000 & Price <= 30000 ~ "midrange",
+      Price > 30000 ~ "premium",
+      TRUE ~ NA_character_
+    )
+  )
 
 # Check your categories select the new column and show it
+car_data %>% 
+  select(price_category)
 ```
 
 # Exercise 4: Filtering Practice
@@ -146,12 +165,19 @@ names(car_data)
 
 ```{r basic-filtering}
 # Find all Toyota cars
-
+toyota_cars <- car_data %>% 
+  filter(Manufacturer == "Toyota")
 
 # Find cars with mileage less than 30,000
-
+low_mileage_cars <- car_data %>% 
+  filter(Mileage < 30000)
 
 # Find luxury cars (from price category) with low mileage
+premium_low_mileage <- car_data %>% 
+  filter(
+    price_category == "premium",
+    Mileage < 30000
+  )
 
 ```
 
@@ -159,18 +185,21 @@ names(car_data)
 
 ```{r multiple-conditions}
 # Find cars that are EITHER Honda OR Nissan
-
+honda_nissan_cars <- car_data %>% 
+  filter(Manufacturer %in% c("Honda", "Nissan"))
 
 # Find cars with price between $20,000 and $35,000
-
+mid_price_cars <- car_data %>% 
+  filter(Price >= 20000, Price <= 35000)
 
 # Find diesel cars less than 10 years old
-
+diesel_under_10 <- car_data %>% 
+  filter(`Fuel type` == "Diesel", age < 10)
 ```
 
 **Question:** How many diesel cars are less than 10 years old?
 
-**Your answer:** [YOUR ANSWER]
+**Your answer:** 2040
 
 # Exercise 5: Grouping and Summarizing
 
@@ -185,17 +214,21 @@ avg_price_by_brand <- car_data %>%
 avg_price_by_brand
 
 # Calculate average mileage by fuel type
-
+avg_mileage_by_fuel <- car_data %>% 
+  group_by(`Fuel type`) %>% 
+  summarize(avg_mileage = mean(`Mileage`, na.rm = TRUE))
 
 # Count cars by manufacturer
-
+cars_by_manufacturer <- car_data %>% 
+  count(Manufacturer)
 ```
 
 ## 5.2 Categorical Summaries
 
 ```{r categorical-summaries}
 # Frequency table for price categories
-
+car_data %>% 
+  count(price_category)
 ```
 
 
