Revised paths and names and quarto

--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ Advanced spatial analysis and data science for urban planning and public policy.
 
 ## About Me
 Shaurya Chauhan, MCP 1st Year, Architect with 5 years of professional experience in the urban development space.
-I am interested in the urban innovation space. Coding is thus a skill I'm interested in learning now- ideally at the intersection between tech and urban development, which this course allows.
+I am interested in the urban innovation space. Coding is thus a skill I'm interested in learning now- ideally at the intersection between tech and urban development, which this course enables.
 
 ## Contact
 - Email: sholly31@upenn.edu
